# 25C2-tpI.RustyRTC

./: .gitignore  Cargo.toml  GEMINI.md  README.md  client_default.conf  decoupling.md  default.conf  problems.md  rtcp_integration.md  server_default.conf
.github/workflows/: ci.yml
certs/: rootCA.pem  signal.internal.pem
certs/dtls/: cert.pem
certs/signaling/: cert.pem
src/: client_to_signaling_server.md  config.rs  lib.rs  logs.md  main.rs  rtp_error.rs  tls_utils.rs  users.db
src/app/: app_proto.rs  conn_state.rs  debug_yuv_to_rgb.rs  gpu_yuv_renderer.rs  gui_error.rs  log_level.rs  log_macros.rs  log_msg.rs  log_sink.rs  logger.rs  logger_handle.rs  mod.rs  rtc_app.rs  utils.rs
src/audio/: audio_agent.rs  audio_io.rs  cpal_io.rs  mod.rs  types.rs
src/audio_poc/: mod.rs  player.rs  poc_main.rs  recorder.rs  udp_receiver.rs  udp_sender.rs
src/camera_manager/: camera_error.rs  camera_manager.rs  camera_manager_c.rs  mod.rs  utils.rs
src/client/: connection_manager.rs  mod.rs
src/congestion_controller/: congestion_controller.rs  congestion_controller_c.rs  constants.rs  mod.rs
src/connection_manager/: config.rs  connection_error.rs  connection_manager.rs  ice_and_sdp.rs  ice_candidate_to_sdp.rs  ice_phase.rs  ice_worker.rs  mod.rs  outbound_sdp.rs  rtp_map.rs  signaling_state.rs
src/core/: constants.rs  engine.rs  events.rs  mod.rs  protocol.rs  session.rs
src/dtls/: buffered_udp_channel.rs  dtls_error.rs  dtls_role.rs  mod.rs  runtime.rs  socket_blocking_guard.rs
src/dtls_srtp/: mod.rs  srtp_context.rs
src/file_handler/: events.rs  file_handler.rs  mod.rs  reader_worker.rs  tests.rs  writer_worker.rs
src/gui/: conn_state.rs  mod.rs  rtc_app.rs
src/ice/: gathering_service.rs  mod.rs  signaling_mock.rs
src/log/: log_level.rs  log_macros.rs  log_msg.rs  log_sink.rs  logger.rs  logger_handle.rs  mod.rs  noop_log_sink.rs
src/media_agent/: audio_capture_error.rs  audio_capture_worker.rs  audio_codec.rs  audio_frame.rs  audio_player_worker.rs  camera_worker.rs  codec_descriptor.rs  constants.rs  decoder_event.rs  decoder_worker.rs  encoder_instruction.rs  encoder_worker.rs  events.rs  frame_format.rs  h264_decoder.rs  h264_encoder.rs  media_agent.rs  media_agent_c.rs  media_agent_error.rs  mod.rs  spec.rs  utils.rs  video_frame.rs
src/media_engine/: media_spec.rs  mod.rs
src/media_transport/: codec.rs  constants.rs  depacketizer_worker.rs  error.rs  events.rs  media_transport.rs  media_transport_c.rs  media_transport_event.rs  mod.rs  packetizer_worker.rs
src/rtcp/: app.rs  app_packet_type.rs  bye.rs  common_header.rs  config.rs  generic_nack.rs  mod.rs  packet_type.rs  picture_loss.rs  receiver_report.rs  report_block.rs  rtcp.rs  rtcp_c.rs  rtcp_error.rs  sdes.rs  sender_info.rs  sender_report.rs
src/rtp/: mod.rs  (+11 more)
tests/: repro_sctp.rs
(+118 files in other folders)
